--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,16 @@
         src: url(./fonts/norse-bold-webfont.woff) format('woff');
         src: url(./fonts/norse-bold-webfont.woff2) format('woff2');
     }
+   
 
 .flex-container{
     display: flex;
     height: 100vh;
-    width: 100vh;
+   
 }
 .image-container{
     background-image: url("./assets/leaf-image.jpg");
-    width: 70%;
+    width: 85vh;
     background-size: cover;
     display: flex;
     flex-direction: column;
@@ -29,8 +30,8 @@
     background-color: black;
     width: 100%;
     height: 130px;
-    margin-top: 150px;
-    opacity: .8;
+    margin-top: 200px;
+    opacity: .5;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -38,7 +39,7 @@
 }
 
 .logo{
-    width:60px;
+    width:80px;
 
 }
 
@@ -51,4 +52,80 @@
     color: white;
     align-self: center;
     margin-top: auto;
+}
+
+.pitch{
+    margin-top: 120px;
+    font-size: 23px;
+    font-weight: 700;
+    padding: 50px;
+    color: rgb(16, 15, 15);
+
+}
+
+.emphasized{
+font-style: italic;
+}
+
+input, label {
+    display:block;
+}
+
+
+form{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 50px;
+    gap: 20px;
+}
+
+ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    gap: 50px;
+}
+
+.sign-up{
+    background-color: rgb(238, 239, 241);
+}
+
+input{
+    width: 220px;
+    height: 20px;
+}
+
+.error{
+    border: red solid 1px;
+}
+
+.error-message{
+    color: red;
+    font-size: 13px;
+}
+
+.create-account-btn{
+    padding: 10px 40px;
+    background-color: #596D48;
+    color: white;
+    border-radius: 5px;
+    margin-top: 30px;
+    margin-left: 50px;
+}
+
+.log-in{
+    margin-top: 30px;
+    margin-left: 50px;
+    font-size: 20px;
+}
+
+.log-in-link{
+    color: #596D48;
+    font-weight: 700;
+}
+
+input:focus{
+    box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+
 }
