--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@
 
 .flex-container{
     display: flex;
-    height: 100vh;
+    height: 120vh;
    
 }
 .image-container{
@@ -52,6 +52,10 @@
     color: white;
     align-self: center;
     margin-top: auto;
+}
+
+.credit-link{
+    color:white;
 }
 
 .pitch{
@@ -114,6 +118,8 @@ input{
     margin-left: 50px;
 }
 
+
+
 .log-in{
     margin-top: 30px;
     margin-left: 50px;
@@ -128,4 +134,8 @@ input{
 input:focus{
     box-shadow: 0 0 5px rgba(81, 203, 238, 1);
 
+}
+
+body{
+    overflow-x: hidden;
 }
